--- a/03_training_jobs.ipynb
+++ b/03_training_jobs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ☁️ Step 3: Training Jobs での機械学習\n",
+    "# ☁️ Step 3: Training Jobs での機械学習（修正版）\n",
     "\n",
     "前のノートブックで作成したS3データを使って、**SageMaker Training Jobs**での機械学習を実行します。\n",
     "\n",
@@ -35,6 +35,7 @@
     "import time\n",
     "import json\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from datetime import datetime\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
     "from sagemaker import get_execution_role\n",
@@ -63,6 +64,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 必要なファイルの存在確認\n",
+    "import os\n",
+    "\n",
+    "print(\"🔍 必要なファイルの確認中...\")\n",
+    "\n",
+    "# scripts/train_lecture.pyの存在確認\n",
+    "script_path = 'scripts/train_lecture.py'\n",
+    "if os.path.exists(script_path):\n",
+    "    print(f\"✅ {script_path} が見つかりました\")\n",
+    "    \n",
+    "    # ファイルサイズを確認\n",
+    "    file_size = os.path.getsize(script_path)\n",
+    "    print(f\"  📄 ファイルサイズ: {file_size:,} bytes\")\n",
+    "else:\n",
+    "    print(f\"❌ {script_path} が見つかりません\")\n",
+    "    print(\"\\n⚠️ エラー: 必要なファイルが見つかりません。\")\n",
+    "    print(\"以下を確認してください:\")\n",
+    "    print(\"1. 正しいフォルダで作業しているか確認\")\n",
+    "    print(\"2. GitHubから正しくクローンされているか確認\")\n",
+    "    print(\"3. scripts/フォルダが存在し、その中にtrain_lecture.pyがあるか確認\")\n",
+    "    \n",
+    "    raise FileNotFoundError(f\"{script_path} が見つかりません\")\n",
+    "\n",
+    "# scriptsフォルダの内容を表示\n",
+    "print(\"\\n📁 scriptsフォルダの内容:\")\n",
+    "if os.path.exists('scripts'):\n",
+    "    script_files = [f for f in os.listdir('scripts') if f.endswith('.py')]\n",
+    "    for file in sorted(script_files):\n",
+    "        file_path = os.path.join('scripts', file)\n",
+    "        file_size = os.path.getsize(file_path)\n",
+    "        print(f\"  📄 {file} ({file_size:,} bytes)\")\n",
+    "    \n",
+    "    if not script_files:\n",
+    "        print(\"  ❌ scriptsフォルダに.pyファイルがありません\")\n",
+    "else:\n",
+    "    print(\"  ❌ scriptsフォルダが存在しません\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,7 +129,7 @@
     "\n",
     "# 講義用Training Jobs設定\n",
     "lecture_estimator = SKLearn(\n",
-    "    entry_point='train_lecture.py',\n",
+    "    entry_point='scripts/train_lecture.py',  # scriptsフォルダ内のファイルを指定\n",
     "    framework_version='1.0-1',\n",
     "    py_version='py3',\n",
     "    instance_type='ml.m5.large',  # 講義用軽量インスタンス\n",
@@ -101,7 +146,7 @@
     "print(\"✅ Estimator設定完了\")\n",
     "print(f\"  💻 インスタンスタイプ: ml.m5.large\")\n",
     "print(f\"  🔢 インスタンス数: 1\")\n",
-    "print(f\"  📄 エントリーポイント: train_lecture.py\")\n",
+    "print(f\"  📄 エントリーポイント: scripts/train_lecture.py\")\n",
     "print(f\"  ⚙️ ハイパーパラメータ: グリッドサーチ有効\")\n",
     "print(f\"  ⏱️ 最大実行時間: 30分\")\n",
     "\n",
@@ -226,12 +271,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. 推論エンドポイントのテスト\n",
+    "## 5. 推論エンドポイントのテスト（修正版）\n",
     "\n",
     "### 📚 学習ポイント\n",
     "- Training Jobsで訓練したモデルのデプロイ\n",
     "- エンドポイントでの推論テスト\n",
-    "- エンドポイントのコスト管理"
+    "- エンドポイントのコスト管理\n",
+    "- エラーハンドリング"
    ]
   },
   {
@@ -255,31 +301,71 @@
     "print(f\"  ✅ エンドポイント作成完了: {endpoint_creation_time:.1f}秒\")\n",
     "print(f\"  🏷️ エンドポイント名: {lecture_predictor.endpoint_name}\")\n",
     "\n",
-    "# テストデータで推論\n",
+    "# テストデータで推論（修正版）\n",
     "print(f\"\\n🎯 推論テスト実行中...\")\n",
     "\n",
     "# S3からテストデータを読み込み（少量）\n",
     "test_data_sample = pd.read_csv(s3_paths['test']).head(5)\n",
-    "test_samples = test_data_sample.drop('target', axis=1).values\n",
-    "actual_labels = test_data_sample['target'].values\n",
     "\n",
-    "inference_start = time.time()\n",
-    "predictions = lecture_predictor.predict(test_samples)\n",
-    "inference_time = time.time() - inference_start\n",
+    "# データの前処理（訓練時と同じ形式に変換）\n",
+    "print(f\"  📊 テストデータ形状: {test_data_sample.shape}\")\n",
+    "print(f\"  📋 カラム数: {len(test_data_sample.columns)}\")\n",
     "\n",
-    "print(f\"  ⏱️ 推論時間: {inference_time:.4f}秒 (5サンプル)\")\n",
-    "print(f\"  🚀 平均推論時間: {inference_time/5:.4f}秒/サンプル\")\n",
+    "# targetカラムを除外してnumpy配列に変換\n",
+    "if 'target' in test_data_sample.columns:\n",
+    "    test_samples = test_data_sample.drop('target', axis=1).values\n",
+    "    actual_labels = test_data_sample['target'].values\n",
+    "else:\n",
+    "    test_samples = test_data_sample.values\n",
+    "    actual_labels = None\n",
+    "    print(\"  ⚠️ targetカラムが見つかりません\")\n",
     "\n",
-    "print(f\"\\n📊 推論結果:\")\n",
-    "correct_predictions = 0\n",
-    "for i, (pred, actual) in enumerate(zip(predictions, actual_labels)):\n",
-    "    status = \"✅\" if pred == actual else \"❌\"\n",
-    "    if pred == actual:\n",
-    "        correct_predictions += 1\n",
-    "    print(f\"  サンプル {i+1}: 予測={pred}, 実際={actual} {status}\")\n",
+    "print(f\"  🎯 推論用データ形状: {test_samples.shape}\")\n",
     "\n",
-    "accuracy = correct_predictions / len(predictions)\n",
-    "print(f\"\\n🎯 推論精度（5サンプル）: {accuracy:.2f} ({correct_predictions}/{len(predictions)})\")\n",
+    "# データ型を確認・修正\n",
+    "test_samples = test_samples.astype(np.float32)\n",
+    "print(f\"  📊 データ型: {test_samples.dtype}\")\n",
+    "\n",
+    "try:\n",
+    "    inference_start = time.time()\n",
+    "    \n",
+    "    # 推論実行（エラーハンドリング付き）\n",
+    "    print(\"  🔮 推論を実行中...\")\n",
+    "    predictions = lecture_predictor.predict(test_samples)\n",
+    "    \n",
+    "    inference_time = time.time() - inference_start\n",
+    "    \n",
+    "    print(f\"  ✅ 推論成功!\")\n",
+    "    print(f\"  ⏱️ 推論時間: {inference_time:.4f}秒 (5サンプル)\")\n",
+    "    print(f\"  🚀 平均推論時間: {inference_time/5:.4f}秒/サンプル\")\n",
+    "    \n",
+    "    # 結果の表示\n",
+    "    if actual_labels is not None:\n",
+    "        print(f\"\\n📊 推論結果:\")\n",
+    "        correct_predictions = 0\n",
+    "        for i, (pred, actual) in enumerate(zip(predictions, actual_labels)):\n",
+    "            status = \"✅\" if pred == actual else \"❌\"\n",
+    "            if pred == actual:\n",
+    "                correct_predictions += 1\n",
+    "            print(f\"  サンプル {i+1}: 予測={pred}, 実際={actual} {status}\")\n",
+    "        \n",
+    "        accuracy = correct_predictions / len(predictions)\n",
+    "        print(f\"\\n🎯 推論精度（5サンプル）: {accuracy:.2f} ({correct_predictions}/{len(predictions)})\")\n",
+    "    else:\n",
+    "        print(f\"\\n📊 推論結果: {predictions}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n❌ 推論エラーが発生しました: {str(e)}\")\n",
+    "    print(\"\\n🔍 トラブルシューティング:\")\n",
+    "    print(\"1. エンドポイントが正常に起動しているか確認\")\n",
+    "    print(\"2. データ形式が訓練時と一致しているか確認\")\n",
+    "    print(\"3. CloudWatchログを確認してください\")\n",
+    "    print(f\"   ログURL: https://console.aws.amazon.com/cloudwatch/home?region={region}#logEventViewer:group=/aws/sagemaker/Endpoints/{lecture_predictor.endpoint_name}\")\n",
+    "    \n",
+    "    # エラーでも処理を継続\n",
+    "    print(\"\\n⚠️ 推論テストはスキップして続行します\")\n",
+    "    inference_time = 0\n",
+    "    accuracy = 0\n",
     "\n",
     "# エンドポイントのコスト情報\n",
     "endpoint_hourly_cost = 0.056  # ml.t2.medium の時間単価\n",
@@ -305,14 +391,18 @@
    "source": [
     "# エンドポイントの削除（重要！）\n",
     "print(\"🗑️ エンドポイントを削除中...\")\n",
-    "lecture_predictor.delete_endpoint()\n",
-    "print(\"✅ エンドポイント削除完了\")\n",
+    "try:\n",
+    "    lecture_predictor.delete_endpoint()\n",
+    "    print(\"✅ エンドポイント削除完了\")\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️ エンドポイント削除エラー: {str(e)}\")\n",
+    "    print(\"💡 手動でAWSコンソールから削除してください\")\n",
     "\n",
     "print(f\"\\n🎉 Training Jobs学習完了!\")\n",
     "print(f\"📊 実行結果サマリー:\")\n",
     "print(f\"  ⏱️ Training Jobs実行時間: {training_jobs_total_time:.1f}秒\")\n",
     "print(f\"  💰 Training Jobsコスト: ${actual_cost:.4f}\")\n",
-    "print(f\"  🔮 推論テスト: 成功\")\n",
+    "print(f\"  🔮 推論テスト: {'成功' if 'accuracy' in locals() and accuracy > 0 else 'スキップ'}\")\n",
     "print(f\"  🗑️ リソースクリーンアップ: 完了\")\n",
     "\n",
     "print(f\"\\n🎯 Training Jobsの特徴を体験しました:\")\n",
@@ -321,7 +411,8 @@
     "    \"スケーラブルなクラウド環境での訓練\",\n",
     "    \"自動的なモデルアーティファクト保存\",\n",
     "    \"推論エンドポイントへの簡単デプロイ\",\n",
-    "    \"詳細な実行統計とコスト管理\"\n",
+    "    \"詳細な実行統計とコスト管理\",\n",
+    "    \"エラーハンドリングとトラブルシューティング\"\n",
     "]\n",
     "\n",
     "for i, feature in enumerate(features, 1):\n",
