Modify Traning jobs

--- a/06_byol_script_mode.ipynb
+++ b/06_byol_script_mode.ipynb
@@ -277,10 +277,10 @@
     "    instance_count=1,\n",
     "    role=role,\n",
     "    hyperparameters={\n",
-    "        'use-custom-ensemble': 'true',\n",
-    "        'ensemble-weights': '0.4,0.4,0.2',  # RF, GB, LR の重み\n",
-    "        'custom-preprocessing': 'true',\n",
-    "        'n-jobs': -1\n",
+    "        'use_custom_ensemble': 'true',\n",
+    "        'ensemble_weights': '0.4,0.4,0.2',  # RF, GB, LR の重み\n",
+    "        'custom_preprocessing': 'true',\n",
+    "        'n_jobs': -1\n",
     "    },\n",
     "    base_job_name='byol-lecture',\n",
     "    max_run=2400  # 最大40分\n",
